# oarc-crawlers

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TERMS_OF_USE.md  arxiv_fetcher.py  beautiful_soup.py  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
data/searches/: python_programming_1744942520.parquet
docs/: API.md  CHEATSHEET.md  CLI.md  Crawlers.md  Examples.md  GET-STARTED.md  Project.md  ProjectStructure.md  Specification.md  Troubleshoot.md  UV-CHEATSHEET.md  __TODO.md  vscode-mcp.md
examples/: arxiv_example.py  beautifulsoup_example.py  combined_example.py  ddg_example.py  example_usage.py  gh_example.py  github_example.py  mcp_example.py  run_example.py  youtube_example.py  yt_example.py
src/: __init__.py  arxiv_fetcher.py  ddg_search.py  gh_crawler.py  youtube_script.py
src/oarc_crawlers/: __init__.py  arxiv_fetcher.py  beautiful_soup.py  ddg_search.py  fastmcp_wrapper.py  main.py  mcp_api.py  parquet_storage.py  youtube_script.py
src/oarc_crawlers/cli/: __init__.py  help_texts.py  main.py  youtube_cli.py
src/oarc_crawlers/cli/cmd/: __init__.py  arxiv_cmd.py  build_cmd.py  config_cmd.py  data_cmd.py  ddg_cmd.py  gh_cmd.py  mcp_cmd.py  publish_cmd.py  web_cmd.py  yt_cmd.py
src/oarc_crawlers/config/: __init__.py  config.py  config_editor.py  config_manager.py  config_validators.py
src/oarc_crawlers/core/: __init__.py
src/oarc_crawlers/core/crawlers/: __init__.py  arxiv_crawler.py  ddg_crawler.py  gh_crawler.py  oeis_crawler.py  web_crawler.py  yt_crawler.py
src/oarc_crawlers/core/mcp/: __init__.py  mcp_manager.py  mcp_server.py
src/oarc_crawlers/decorators/: __init__.py  handle_error.py  singleton.py
src/oarc_crawlers/utils/: __init__.py  build_utils.py  const.py  crawler_utils.py  error_handler.py  errors.py  log.py  mcp_utils.py  paths.py  storage_utils.py
src/tests/: __init__.py  run_tests.py  test_arxiv.py  test_bs_crawler.py  test_ddg.py  test_github_crawler.py
src/tests/oarc_crawlers/: test_main.py
tests/: run_tests.py  test_arxiv.py  test_bs_crawler.py  test_ddg.py  test_github_crawler.py  test_parquet_storage.py  test_youtube_script.py
(+103 files in other folders)
